[workspace]
resolver = "2"
members = [
    "helper",
    "day-01",
    "day-02",
    "day-03",
    "day-04",
    "day-05",
    "day-06",
    "day-07",
    "day-08",
    "day-09",
    "day-10",
    "day-11",
    "day-12",
    "day-13",
    "day-14",
    "day-15",
    "day-16",
    "day-17",
    "day-18",
    "day-19",
    "day-20",
    "day-21",
]

[workspace.package]
version = "1.0.0"
edition = "2021"


[workspace.dependencies]
rayon = "1.10.0"
itertools = "0.13.0"
num = "0.4.3"
regex = "1.11.1"
pathfinding = "4.12.0"
cached = "0.54.0"

helper = { path = "./helper" }
